<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="company_name">شرکت آبادانی و مسکن الهیه خراسان</string>
    <string name="app_name">شرکت آبادانی و مسکن الهیه خراسان</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_appMenu">AppMenu</string>
    <string name="title_activity_personnel_info">PersonnelInfo</string>
    <string name="title_activity_shares_info">SharesInfo</string>
    <string name="title_activity_financial_info">FinancialInfo</string>
    <string name="title_activity_lawyer_info">LawyerInfo</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_messages_inbox">MessagesInbox</string>
    <string name="title_activity_messages_outbox">MessagesOutbox</string>
    <string name="title_activity_messages_sent">MessagesSent</string>
    <string name="title_activity_messages_new">MessagesNew</string>
    <string name="title_activity_message_row_style">MessageRowStyle</string>
    <string name="title_activity_show_info">ShowInfo</string>
    <string name="wait_for_request">در حال دریافت اطلاعات</string>
    <string name="date">تاریخ:</string>
    <string name="message_sent">پیام ارسال شد</string>
    <string name="personal_info">اطلاعات سهامداری</string>
    <string name="postal_info">اطلاعات پستی</string>
    <string name="pic">عکس</string>
    <string name="last_share_price">آخرین تغییرات قیمت</string>
    <string name="buy_sell">خرید و فروش سهام</string>
    <string name="financial_info">اطلاعات مالی</string>
    <string name="news">اخبار و اطلاعیه ها</string>
    <string name="messages">پیامها</string>
    <string name="update">بروز رسانی</string>
    <string name="exit">خروج</string>
    <string name="delete_database">حذف دیتابیس</string>
    <string name="shit">بیخودی</string>
    <string name="send_to">ارسال به</string>
    <string name="message_text">متن پیامک جهت ارسال به وکیل</string>
    <string name="title">عنوان</string>
    <string name="return_value">بازگشت</string>
    <string name="postal_code">کد پستی</string>
    <string name="email">ایمیل</string>
    <string name="home_tel">تلفن منزل</string>
    <string name="home_address">آدرس منزل</string>
    <string name="work_address">آدرس محل کار</string>
    <string name="work_tel">تلفن محل کار</string>
    <string name="mobile">همراه</string>
    <string name="share_code">کد سهامداری</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="father">نام پدر</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="shsh">شماره شناسنامه</string>
    <string name="national_code">کد ملی</string>
    <string name="city">شهر</string>
    <string name="buy_shares">خرید سهام</string>
    <string name="sell_shares">فروش سهام</string>
    <string name="history">سوابق</string>
    <string name="share_count">تعداد سهم</string>
    <string name="request">درخواست</string>
    <string name="title_activity_login">Sahamdaran</string>
    <string name="username">نام کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="login">ورود</string>
    <string name="share">سهم</string>
    <string name="request_sent">درخواست شما ثبت شد</string>
    <string name="price">مبلغ:</string>
    <string name="currency">ریال</string>
    <string name="for_what">بابت</string>
    <string name="internet_message_text">متن پیام</string>
    <string name="inbox">دریافتی</string>
    <string name="sent">ارسال شده</string>
    <string name="send">ارسال</string>
    <string name="new_message">جدید</string>
    <string name="login_failed">اطلاعات کاربری صحیح نمیباشد</string>
    <string name="connection_failed">دسترسی به اینترنت میسر نیست</string>
    <string name="loading">در حال دریافت اطلاعات</string>
    <string name="title_activity_person_panel">PersonPanel</string>
    <string name="title_activity_test">Test</string>
    <string name="general_title">نرم افزار سهامداران شرکت الهیه</string>
    <string name="show_info">نمایش اطلاعات</string>
    <string name="save_changes">ذخیره تغییرات</string>
    <string name="error_no_share_count">لطفا تعداد سهم را وارد کنید</string>
    <string name="warning_buy_sell">درخواست ارسال شده، فقط جهت اطلاع واحد سهام برای اقدام میباشد و هیچ گونه تعهدی برای شرکت ایجاد نمیکند. درصورت امکان انجام درخواست از طریق مدیریت سهام با شما تماس گرفته میشود</string>
    <string name="warning_only_numeric">در این قسمت باید فقط عدد وارد کنید</string>
    <string name="today_price">قیمت امروز سهام:</string>
    <string name="title_activity_last_prices">LastPrices</string>
    <string name="delete">حذف</string>
    
</resources>