<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundrep" >
    
    <LinearLayout
        android:id="@+id/HeadMenu"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#3b90b2"
        android:orientation="horizontal"
        android:weightSum="2" >
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="left"
        android:layout_gravity="left"
        android:layout_weight="1" >
	         
            <Button
                android:id="@+id/btntopleftlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="#3b90b2"
                android:gravity="right"
                android:textAlignment="gravity"
                android:drawableRight="@drawable/elahiyetopleftlogo"
                android:layout_marginLeft="3dp"/>
            
        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_weight="1" >

            <TextView
                android:id="@+id/personalinfopagetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="اطلاعات شخصی"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp" />
	        
        </LinearLayout>
    </LinearLayout>
    
     <TabHost
			android:id="@+id/tabhost"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_below="@+id/HeadMenu">
			    <LinearLayout
				    android:orientation="vertical"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent">
				        <TabWidget android:id="@android:id/tabs"
					        android:layout_width="fill_parent"
					        android:layout_height="60dp"/>
					            <FrameLayout android:id="@android:id/tabcontent"
					            android:layout_width="fill_parent"
					            android:layout_height="fill_parent">
					            
					                <FrameLayout android:layout_width="fill_parent"
					                android:layout_height="fill_parent"
					                android:id="@+id/tab3">

					                    <LinearLayout
										            android:layout_width="match_parent"
										            android:layout_height="match_parent"
										            android:orientation="vertical"
										            android:gravity="top" >
        
					                        <ScrollView
										            android:layout_width="match_parent"
										            android:layout_height="match_parent"
										            android:orientation="vertical"
										            android:gravity="top" >
        											
													 <LinearLayout
                    style="@style/linearVertical"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="top">
					                        
									<ImageView
									    android:id="@+id/imgPerson"
									    android:layout_width="200dp"
									    android:layout_height="270dp"
									    android:layout_gravity="center"
									    android:contentDescription="Person pic" />
									
									<Button
						                android:id="@+id/BtnTakeAPersonalPhoto"
						                android:layout_width="match_parent"
						                android:layout_height="wrap_content"
						                android:textColor="#fff"
						                android:textSize="20sp"
						                android:text="گرفتن عکس پرسنلی"
						                android:background="@drawable/rounded_button"
						                android:gravity="center"
						                android:textAlignment="gravity"
						                android:drawableRight="@drawable/iconcamera"
						                android:layout_marginLeft="30dp"
						                android:layout_marginRight="30dp"
						                android:onClick="clickHandler"
						                android:layout_marginTop="10dp"/>
									
									<Button
						                android:id="@+id/BtnSelectPhotoFromGallery"
						                android:layout_width="match_parent"
						                android:layout_height="wrap_content"
						                android:textColor="#fff"
						                android:textSize="20sp"
						                android:text="انتخاب عکس پرسنلی از گالری"
						                android:background="@drawable/rounded_button"
						                android:gravity="center"
						                android:textAlignment="gravity"
						                android:drawableRight="@drawable/gallery"
						                android:layout_marginLeft="30dp"
						                android:layout_marginRight="30dp"
						                android:layout_marginTop="10dp"
						                android:onClick="clickHandler"/>
									
									<Button
                android:id="@+id/personelPicSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"
                android:text="ذخیره عکس پرسنلی"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/saveicon"/>
											
									</LinearLayout>
									</ScrollView>
										     
									     </LinearLayout>
								     </FrameLayout>
					                
					                <FrameLayout android:layout_width="fill_parent"
					                android:layout_height="fill_parent"
					                android:id="@+id/tab2">

					                    <ScrollView
										            android:layout_width="match_parent"
										            android:layout_height="match_parent"
										            android:orientation="vertical"
										            android:gravity="center_vertical" >
        											
													 <LinearLayout
                    style="@style/linearVertical"
                    android:padding="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp">

                    <TextView
                        style="@style/textView"
                        android:text="@string/postal_code"
                        android:id="@+id/postal_code"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtPostalCode"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/email"
                        android:id="@+id/email"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtEmail"
                        android:inputType="textEmailAddress"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/home_tel"
                        android:id="@+id/home_tel"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtHomeTel"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/work_tel"
                        android:id="@+id/work_tel"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtWorkTel"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>
                    
                    <TextView
                        style="@style/textView"
                        android:text="شهر"
                        android:id="@+id/cityhome"/>
                    
                    <Spinner
                        android:id="@+id/lstCitys"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp" />

                    <TextView
                        style="@style/textView"
                        android:text="@string/home_address"
                        android:id="@+id/home_address"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtHomeAddress"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/work_address"
                        android:id="@+id/work_address"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtWorkAddress"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/mobile"
                        android:id="@+id/mobile"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtMobile"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>
                    
                          <Button
                android:id="@+id/personelinfosave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"
                android:text="ذخیره تغییرات"
                android:layout_marginTop="15dp"
                android:drawableRight="@drawable/saveicon"/>
                    
                </LinearLayout>
												    	 
									     </ScrollView>
								     </FrameLayout>
												   
							        <FrameLayout android:layout_width="fill_parent"
							        android:layout_height="fill_parent"
							        android:id="@+id/tab1">
							         	
										<ScrollView
								            android:layout_width="match_parent"
								            android:layout_height="match_parent"
								            android:orientation="vertical"
								            android:gravity="center_vertical" >
	         
										    	<LinearLayout
                    style="@style/linearVertical"
                    android:padding="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp" >

                    <TextView
                        style="@style/textView"
                        android:text="@string/share_code"
                        android:id="@+id/share_code"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtCode"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/full_name"
                        android:id="@+id/full_name"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtFullNamePersonalInfo"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/father"
                        android:id="@+id/father"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtFather"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/birth_date"
                        android:id="@+id/birth_date"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtBirthdate"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/shsh"
                        android:id="@+id/shsh"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtShSh"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="@string/national_code"
                        android:id="@+id/national_code"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/txtNationalCode"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                    <TextView
                        style="@style/textView"
                        android:text="شهر محل تولد"
                        android:id="@+id/city"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/lstCities"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>
                    
                    <TextView
                        style="@style/textView"
                        android:text="تعداد سهام"
                        android:id="@+id/txtvsharecount"/>

                    <EditText
                        style="@style/textEdit"
                        android:id="@+id/edtextsharecount"
                        android:enabled="false"
                        android:gravity="center"
                        android:textAlignment="gravity">

                        <requestFocus />
                    </EditText>

                </LinearLayout>
									  
								    	 </ScrollView>
							        </FrameLayout>
				    			</FrameLayout>
			</LinearLayout>
	</TabHost>

</RelativeLayout>